--- a/departments/aa/placement.html
+++ b/departments/aa/placement.html
@@ -289,6 +289,9 @@
         <td>ARCHITECTURE DESIGN CORE, BATHINDA</td>
         <td>0.72</td>
     </tr>
+    <tr>
+        <td colspan="7"><hr/></td>
+     </tr>
                               <tr>
                                 <td>1</td>
                                 <td>2022-23</td>
@@ -325,8 +328,11 @@
                                 <td>ATINDER ARCHITECTS, BATHINDA</td>
                                 <td>0.72</td>
                               </tr>
+                              <tr>
+                                <td colspan="7"><hr/></td>
+                             </tr>
                                 <tr>
-                                    <td>5</td>
+                                    <td>1</td>
                                     <td>2021-22</td>
                                     <td>TUSHAR MANDORIA</td>
                                     <td>190198202258</td>
@@ -335,7 +341,7 @@
                                     <td>0.84</td>
                                 </tr>
                                 <tr>
-                                    <td>6</td>
+                                    <td>2</td>
                                     <td>2021-22</td>
                                     <td>MANKIRAT SINGH</td>
                                     <td>190198202246</td>
@@ -344,7 +350,7 @@
                                     <td>0.84</td>
                                 </tr>
                                 <tr>
-                                    <td>7</td>
+                                    <td>3</td>
                                     <td>2021-22</td>
                                     <td>ADITYA KHICHI</td>
                                     <td>190198280424</td>
@@ -353,7 +359,7 @@
                                     <td>0.72</td>
                                 </tr>
                                 <tr>
-                                    <td>8</td>
+                                    <td>4</td>
                                     <td>2021-22</td>
                                     <td>GOBIND</td>
                                     <td>190198202235</td>
@@ -362,7 +368,7 @@
                                     <td>0.72</td>
                                 </tr>
                                 <tr>
-                                    <td>9</td>
+                                    <td>5</td>
                                     <td>2021-22</td>
                                     <td>PANKAJ</td>
                                     <td>190198202248</td>
@@ -371,7 +377,10 @@
                                     <td>0.96</td>
                                 </tr>
                                 <tr>
-                                    <td>10</td>
+                                    <td colspan="7"><hr/></td>
+                                 </tr>
+                                <tr>
+                                    <td>1</td>
                                     <td>2020-21</td>
                                     <td>YISHU GARG</td>
                                     <td>180198202483</td>
@@ -380,7 +389,7 @@
                                     <td>0.5</td>
                                 </tr>
                                 <tr>
-                                    <td>11</td>
+                                    <td>2</td>
                                     <td>2020-21</td>
                                     <td>KARAN NOHRIA</td>
                                     <td>180198202467</td>
@@ -389,7 +398,7 @@
                                     <td>0.5</td>
                                 </tr>
                                 <tr>
-                                    <td>12</td>
+                                    <td>3</td>
                                     <td>2020-21</td>
                                     <td>RUPINDER SINGH</td>
                                     <td>180198202475</td>
@@ -398,7 +407,7 @@
                                     <td>0.5</td>
                                 </tr>
                                 <tr>
-                                    <td>13</td>
+                                    <td>4</td>
                                     <td>2020-21</td>
                                     <td>ANGREJ SIINGH</td>
                                     <td>180198202463</td>
@@ -407,7 +416,7 @@
                                     <td>0.84</td>
                                 </tr>
                                 <tr>
-                                    <td>14</td>
+                                    <td>5</td>
                                     <td>2020-21</td>
                                     <td>NAVDEEP</td>
                                     <td>180198280851</td>
@@ -416,7 +425,7 @@
                                     <td>0.6</td>
                                 </tr>
                                 <tr>
-                                    <td>15</td>
+                                    <td>6</td>
                                     <td>2020-21</td>
                                     <td>LOVEJEET SINGH</td>
                                     <td>180198202468</td>
@@ -425,7 +434,7 @@
                                     <td>0.72</td>
                                 </tr>
                                 <tr>
-                                    <td>16</td>
+                                    <td>7</td>
                                     <td>2020-21</td>
                                     <td>GOURAV KUMAR</td>
                                     <td>180198202465</td>
@@ -434,7 +443,7 @@
                                     <td>0.6</td>
                                 </tr>
                                 <tr>
-                                    <td>17</td>
+                                    <td>8</td>
                                     <td>2020-21</td>
                                     <td>PARMINDER KAUR</td>
                                     <td>180198202472</td>
@@ -443,7 +452,10 @@
                                     <td>0.84</td>
                                 </tr>
                                 <tr>
-                                    <td>18</td>
+                                    <td colspan="7"><hr/></td>
+                                 </tr>
+                                <tr>
+                                    <td>1</td>
                                     <td>2019-20</td>
                                     <td>HARMANJOT SINGH</td>
                                     <td>160198202968</td>
@@ -452,7 +464,7 @@
                                     <td>0.6</td>
                                 </tr>
                                 <tr>
-                                    <td>19</td>
+                                    <td>2</td>
                                     <td>2019-20</td>
                                     <td>VINAYPREET KAUR</td>
                                     <td>170198203252</td>
@@ -461,7 +473,7 @@
                                     <td>0.72</td>
                                 </tr>
                                 <tr>
-                                    <td>20</td>
+                                    <td>3</td>
                                     <td>2019-20</td>
                                     <td>BABLU RAM</td>
                                     <td>170198203230</td>
@@ -470,7 +482,7 @@
                                     <td>0.72</td>
                                 </tr>
                                 <tr>
-                                    <td>21</td>
+                                    <td>4</td>
                                     <td>2019-20</td>
                                     <td>HARJEET SINGH</td>
                                     <td>170198203235</td>
@@ -479,7 +491,7 @@
                                     <td>0.72</td>
                                 </tr>
                                 <tr>
-                                    <td>22</td>
+                                    <td>5</td>
                                     <td>2019-20</td>
                                     <td>MANPREET KAUR</td>
                                     <td>170198203241</td>
@@ -488,7 +500,7 @@
                                     <td>0.72</td>
                                 </tr>
                                 <tr>
-                                    <td>23</td>
+                                    <td>6</td>
                                     <td>2019-20</td>
                                     <td>SAHIL KUMAR</td>
                                     <td>170198270945</td>
@@ -497,7 +509,7 @@
                                     <td>0.66</td>
                                 </tr>
                                 <tr>
-                                    <td>24</td>
+                                    <td>7</td>
                                     <td>2019-20</td>
                                     <td>ARCHANA</td>
                                     <td>170198203228</td>
@@ -506,7 +518,7 @@
                                     <td>0.3</td>
                                 </tr>
                                 <tr>
-                                    <td>25</td>
+                                    <td>8</td>
                                     <td>2019-20</td>
                                     <td>MAHESH GARG</td>
                                     <td>170198203241</td>
@@ -515,7 +527,7 @@
                                     <td>0.3</td>
                                 </tr>
                                 <tr>
-                                    <td>26</td>
+                                    <td>9</td>
                                     <td>2019-20</td>
                                     <td>ATUL SHARMA</td>
                                     <td>170198203229</td>
