--- a/departments/ce/placement.html
+++ b/departments/ce/placement.html
@@ -524,7 +524,7 @@
         <td colspan="7"><hr/></td>
         </tr>
     <tr>
-        <td>21</td>
+        <td>1</td>
         <td>2020-2021</td>
         <td>ABHIMANYU KUMAR</td>
         <td>180195180777</td>
@@ -533,7 +533,7 @@
         <td>0.72</td>
     </tr>
     <tr>
-        <td>22</td>
+        <td>2</td>
         <td>2020-2021</td>
         <td>ANKIT KUMAR</td>
         <td>180195180778</td>
@@ -542,7 +542,7 @@
         <td>0.72</td>
     </tr>
     <tr>
-        <td>23</td>
+        <td>3</td>
         <td>2020-2021</td>
         <td>CHIRAG BANSAL</td>
         <td>180195102258</td>
@@ -551,7 +551,7 @@
         <td>0.76</td>
     </tr>
     <tr>
-        <td>24</td>
+        <td>4</td>
         <td>2020-2021</td>
         <td>CHIRANJEEV</td>
         <td>180195102259</td>
@@ -560,7 +560,7 @@
         <td>0.72</td>
     </tr>
     <tr>
-        <td>25</td>
+        <td>5</td>
         <td>2020-2021</td>
         <td>DAMNEET MATTU</td>
         <td>180195102260</td>
@@ -569,7 +569,7 @@
         <td>0.72</td>
     </tr>
     <tr>
-        <td>26</td>
+        <td>6</td>
         <td>2020-2021</td>
         <td>DAVINDER SINGH</td>
         <td>180195180779</td>
@@ -578,7 +578,7 @@
         <td>0.78</td>
     </tr>
     <tr>
-        <td>27</td>
+        <td>7</td>
         <td>2020-2021</td>
         <td>GURWINDER SINGH</td>
         <td>180195180781</td>
@@ -587,7 +587,7 @@
         <td>0.72</td>
     </tr>
     <tr>
-        <td>28</td>
+        <td>8</td>
         <td>2020-2021</td>
         <td>JAFAR ALAM</td>
         <td>180195180783</td>
@@ -596,7 +596,7 @@
         <td>0.78</td>
     </tr>
     <tr>
-        <td>29</td>
+        <td>9</td>
         <td>2020-2021</td>
         <td>KRISHAN KUMAR</td>
         <td>180195180785</td>
@@ -605,7 +605,7 @@
         <td>0.78</td>
     </tr>
     <tr>
-        <td>30</td>
+        <td>10</td>
         <td>2020-2021</td>
         <td>KULDEEP SINGH</td>
         <td>180195102277</td>
@@ -614,7 +614,7 @@
         <td>0.72</td>
     </tr>
     <tr>
-        <td>31</td>
+        <td>11</td>
         <td>2020-2021</td>
         <td>LACHHMAN DASS</td>
         <td>180195180786</td>
@@ -623,7 +623,7 @@
         <td>0.76</td>
     </tr>
     <tr>
-        <td>32</td>
+        <td>12</td>
         <td>2020-2021</td>
         <td>MANJINDER SINGH</td>
         <td>180195102281</td>
@@ -632,7 +632,7 @@
         <td>0.76</td>
     </tr>
     <tr>
-        <td>33</td>
+        <td>13</td>
         <td>2020-2021</td>
         <td>MANGA SINGH</td>
         <td>180195180787</td>
@@ -641,7 +641,7 @@
         <td>0.78</td>
     </tr>
     <tr>
-        <td>34</td>
+        <td>14</td>
         <td>2020-2021</td>
         <td>MANISH KUMAR SINGH</td>
         <td>180195102280</td>
@@ -650,7 +650,7 @@
         <td>0.78</td>
     </tr>
     <tr>
-        <td>35</td>
+        <td>15</td>
         <td>2020-2021</td>
         <td>PANKAJ KUMAR </td>
         <td>180195102287</td>
@@ -659,7 +659,7 @@
         <td>0.78</td>
     </tr>
     <tr>
-        <td>36</td>
+        <td>16</td>
         <td>2020-2021</td>
         <td>RAJANDEEP SINGH</td>
         <td>180195180788</td>
@@ -668,7 +668,7 @@
         <td>0.80</td>
     </tr>
     <tr>
-        <td>37</td>
+        <td>17</td>
         <td>2020-2021</td>
         <td>SHASHIV GARG</td>
         <td>180195102293</td>
@@ -677,7 +677,7 @@
         <td>0.80</td>
     </tr>
     <tr>
-        <td>38</td>
+        <td>18</td>
         <td>2020-2021</td>
         <td>VISHAL YADAV</td>
         <td>180195102297</td>
@@ -686,7 +686,11 @@
         <td>0.80</td>
     </tr>
     <tr>
-        <td>39</td>
+        <td colspan="7"><hr/></td>
+        </tr>
+    <tr>
+    <tr>
+        <td>1</td>
         <td>2019-2020</td>
         <td>GAGANDEEP SINGH</td>
         <td>170195170880</td>
@@ -695,7 +699,7 @@
         <td>0.72</td>
     </tr>
     <tr>
-        <td>40</td>
+        <td>2</td>
         <td>2019-2020</td>
         <td>HARMANDEEP SINGH</td>
         <td>170195102969</td>
@@ -704,7 +708,7 @@
         <td>0.72</td>
     </tr>
     <tr>
-        <td>41</td>
+        <td>3</td>
         <td>2019-2020</td>
         <td>MANPREET SINGH</td>
         <td>170195102993</td>
@@ -713,7 +717,7 @@
         <td>0.72</td>
     </tr>
     <tr>
-        <td>42</td>
+        <td>4</td>
         <td>2019-2020</td>
         <td>GURWINDER SINGH</td>
         <td>170195170882</td>
@@ -722,7 +726,7 @@
         <td>0.72</td>
     </tr>
     <tr>
-        <td>43</td>
+        <td>5</td>
         <td>2019-2020</td>
         <td>RAJ KUMAR</td>
         <td>170195170887</td>
@@ -731,7 +735,7 @@
         <td>0.78</td>
     </tr>
     <tr>
-        <td>44</td>
+        <td>6</td>
         <td>2019-2020</td>
         <td>RAMANDEEP SINGH</td>
         <td>170195170888</td>
@@ -740,7 +744,7 @@
         <td>0.78</td>
     </tr>
     <tr>
-        <td>45</td>
+        <td>7</td>
         <td>2019-2020</td>
         <td>Jaswinder Singh</td>
         <td>170195102981</td>
@@ -749,7 +753,7 @@
         <td>0.78</td>
     </tr>
     <tr>
-        <td>46</td>
+        <td>8</td>
         <td>2019-2020</td>
         <td>Pinku Singh Chauhan</td>
         <td>170195102999</td>
@@ -758,7 +762,7 @@
         <td>0.78</td>
     </tr>
     <tr>
-        <td>47</td>
+        <td>9</td>
         <td>2019-2020</td>
         <td>Pushwinder Singh(FWS)</td>
         <td>170195103003</td>
@@ -767,7 +771,7 @@
         <td>0.78</td>
     </tr>
     <tr>
-        <td>48</td>
+        <td>10</td>
         <td>2019-2020</td>
         <td>Amaninder Singh</td>
         <td>170195102955</td>
@@ -776,7 +780,7 @@
         <td>0.78</td>
     </tr>
     <tr>
-        <td>49</td>
+        <td>11</td>
         <td>2019-2020</td>
         <td>Davy Bansal</td>
         <td>170195102963</td>
@@ -785,7 +789,7 @@
         <td>0.78</td>
     </tr>
     <tr>
-        <td>50</td>
+        <td>12</td>
         <td>2019-2020</td>
         <td>Ekamjot Singh</td>
         <td>170195102964</td>
@@ -794,7 +798,7 @@
         <td>0.78</td>
     </tr>
     <tr>
-        <td>51</td>
+        <td>13</td>
         <td>2019-2020</td>
         <td>Gurpreet Singh</td>
         <td>170195102966</td>
@@ -803,7 +807,7 @@
         <td>0.76</td>
     </tr>
     <tr>
-        <td>52</td>
+        <td>14</td>
         <td>2019-2020</td>
         <td>Harshdeep Goyal</td>
         <td>170195102976</td>
@@ -812,7 +816,7 @@
         <td>0.76</td>
     </tr>
     <tr>
-        <td>53</td>
+        <td>15</td>
         <td>2019-2020</td>
         <td>Manveer Singh </td>
         <td>170195170885</td>
@@ -821,7 +825,7 @@
         <td>0.76</td>
     </tr>
     <tr>
-        <td>54</td>
+        <td>16</td>
         <td>2019-2020</td>
         <td>Harjeet Singh</td>
         <td>170195102968</td>
@@ -830,7 +834,7 @@
         <td>0.72</td>
     </tr>
     <tr>
-        <td>55</td>
+        <td>17</td>
         <td>2019-2020</td>
         <td>Harpreet Singh s/o H S</td>
         <td>170195102972</td>
@@ -839,7 +843,7 @@
         <td>0.72</td>
     </tr>
     <tr>
-        <td>56</td>
+        <td>18</td>
         <td>2019-2020</td>
         <td>Gurpreet Sharma</td>
         <td>170195102965</td>
@@ -854,6 +858,7 @@
                      <div class="data-placement">
                         <table class="table table-striped">
                             <thead>
+
                              <tr>
                                  <td>Sr.No.</td>
                                  <td>Name of the Company</td>
@@ -863,6 +868,30 @@
                              </tr>
                             </thead>
                              <tbody>
+                                <tr>
+                                    <td>1</td>
+                                    <td>Sunrise Const. Kotkapura</td>
+                                    <td>2023-24</td>
+                                    <td>4</td>
+                                    <td>0.84</td>
+                                </tr>
+                                <tr>
+                                    <td>2</td>
+                                    <td>JP Arch, Bathinda</td>
+                                    <td>2023-24</td>
+                                    <td>5</td>
+                                    <td>0.90</td>
+                                </tr>
+                                <tr>
+                                    <td>3</td>
+                                    <td>Global Engr &amp; Cons. Bathinda</td>
+                                    <td>2023-24</td>
+                                    <td>2</td>
+                                    <td>0.72</td>
+                                </tr>
+                                <tr>
+                                    <td colspan="5"><hr/></td>
+                                </tr>
                               <tr>
                                 <td>1</td>
                                 <td>MANN ARCH. & ENGRS</td>
@@ -891,120 +920,129 @@
                           <td>2</td>
                           <td>0.72</td>
                       </tr>
+                      <tr>
+                        <td colspan="5"><hr/></td>
+                    </tr>
                                 <tr>
-        <td>5</td>
+        <td>1</td>
         <td>M/S WAZIR CHAND CONTRACTOR</td>
         <td>2021-22</td>
         <td>3</td>
         <td>0.72</td>
     </tr>
     <tr>
-        <td>6</td>
+        <td>2</td>
         <td>GLOBAL ENGINEERS &amp; CONSULTANTS</td>
         <td>2021-22</td>
         <td>3</td>
         <td>0.72</td>
     </tr>
     <tr>
-        <td>7</td>
+        <td>3</td>
         <td>CORE DESIGN CONSULTANTS</td>
         <td>2021-22</td>
         <td>1</td>
         <td>0.96</td>
     </tr>
     <tr>
-        <td>8</td>
+        <td>4</td>
         <td>M/S RAM KUMAR BANSAL CONTRACTOR</td>
         <td>2021-22</td>
         <td>3</td>
         <td>0.72</td>
     </tr>
     <tr>
-        <td>9</td>
+        <td>5</td>
         <td>J.P. ARCHITECTS</td>
         <td>2021-22</td>
         <td>2</td>
         <td>0.6</td>
     </tr>
     <tr>
-        <td>10</td>
+        <td colspan="5"><hr/></td>
+    </tr>
+    <tr>
+        <td>1</td>
         <td>ACE ASSOCIATES</td>
         <td>2020-21</td>
         <td>3</td>
         <td>0.72</td>
     </tr>
     <tr>
-        <td>11</td>
+        <td>2</td>
         <td>GLOBAL ENGINEERS AND CONSULTANTS</td>
         <td>2020-21</td>
         <td>3</td>
         <td>0.72</td>
     </tr>
     <tr>
-        <td>12</td>
+        <td>3</td>
         <td>INFINITY CONTRACTORS</td>
         <td>2020-21</td>
         <td>3</td>
         <td>0.768</td>
     </tr>
     <tr>
-        <td>13</td>
+        <td>4</td>
         <td>M/S RAM KUMAR BANSAL CONTRACTOR</td>
         <td>2020-21</td>
         <td>3</td>
         <td>0.78</td>
     </tr>
     <tr>
-        <td>14</td>
+        <td>5</td>
         <td>M/S WAZIR CHAND BANSAL CONTRACTOR</td>
         <td>2020-21</td>
         <td>3</td>
         <td>0.78</td>
     </tr>
     <tr>
-        <td>15</td>
+        <td>6</td>
         <td>RAVINDER SINGH MITTAL CONTRACTOR</td>
         <td>2020-21</td>
         <td>3</td>
         <td>0.804</td>
     </tr>
     <tr>
-        <td>16</td>
+        <td colspan="5"><hr/></td>
+    </tr>
+    <tr>
+        <td>1</td>
         <td>ACE ASSOCIATES</td>
         <td>2019-20</td>
         <td>3</td>
         <td>0.72</td>
     </tr>
     <tr>
-        <td>17</td>
+        <td>2</td>
         <td>M/S WAZIR CHAND BANSAL CONTRACTOR</td>
         <td>2019-20</td>
         <td>3</td>
         <td>0.78</td>
     </tr>
     <tr>
-        <td>18</td>
+        <td>3</td>
         <td>M/S RAM KUMAR BANSAL CONTRACTOR</td>
         <td>2019-20</td>
         <td>3</td>
         <td>0.78</td>
     </tr>
     <tr>
-        <td>19</td>
+        <td>4</td>
         <td>GLOBAL ENGINEERS AND CONSULTANTS</td>
         <td>2019-20</td>
         <td>3</td>
         <td>0.78</td>
     </tr>
     <tr>
-        <td>20</td>
+        <td>5</td>
         <td>INFINITY CONTRACTORS</td>
         <td>2019-20</td>
         <td>3</td>
         <td>0.768</td>
     </tr>
     <tr>
-        <td>21</td>
+        <td>6</td>
         <td>SHRIKHANDE CONSULTANTS PVT. LTD.</td>
         <td>2019-20</td>
         <td>3</td>
