--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ https://templatemo.com/tm-569-edu-meeting
                     <marquee style="margin-bottom: 10px;" behavior="scroll" direction="up" scrollamount="2">
                     <ol>
                       <li>
-                            <img src="assets/images/news.gif" alt="" class="new-news"><a href="https://ggi.ac.in/hackathon/" target="_blank">NextQuantum 2.0- Hackathong by GGI, Khanna</a>
+                            <img src="assets/images/news.gif" alt="" class="new-news"><a href="https://ggi.ac.in/hackathon/" target="_blank">NextQuantum 2.0- Hackathon by GGI, Khanna</a>
                           </li>
                         <li>
                             <img src="assets/images/news.gif" alt="" class="new-news"><a href="http://www.punjabteched.net/news/Academic_calender_2024-25.PDF" target="_blank">Academic Calendar (Even Semester) 2024-25</a>
