--- a/index.html
+++ b/index.html
@@ -228,9 +228,20 @@ https://templatemo.com/tm-569-edu-meeting
                     </div>
                     <marquee style="margin-bottom: 10px;" behavior="scroll" direction="up" scrollamount="2">
                     <ol>
-                      <li>
+                      <!-- <li>
                             <img src="assets/images/news.gif" alt="" class="new-news"><a href="https://ggi.ac.in/hackathon/" target="_blank">NextQuantum 2.0- Hackathon by GGI, Khanna</a>
-                          </li>
+                          </li> -->
+
+                          <li>
+                            <img src="assets/images/news.gif" alt="" class="new-news"><a href="http://www.punjabteched.com/" target="_blank">
+                              PSBTE Admissions (2025-26) to Diploma Courses
+                           </a>
+                         </li>
+                         <li>
+                            <img src="assets/images/news.gif" alt="" class="new-news"><a href="http://www.punjabteched.net/news/Letter_APF_May_2025_Exams.pdf" target="_blank">
+                             Conduct of State Board May-June 2025 Examination- Regarding
+                           </a>
+                         </li>
                         <li>
                             <img src="assets/images/news.gif" alt="" class="new-news"><a href="http://www.punjabteched.net/news/Academic_calender_2024-25.PDF" target="_blank">Academic Calendar (Even Semester) 2024-25</a>
                           </li>
@@ -742,7 +753,7 @@ https://templatemo.com/tm-569-edu-meeting
       <div class="row">
         <div class="col-lg-12">
           <div class="section-heading">
-            <h2 align="center">Events &amp; Academic Activities (2023)</h2>
+            <h2 align="center">Events &amp; Academic Activities (2025 and 2024)</h2>
           </div>
         </div>
         </div>
@@ -759,16 +770,14 @@ https://templatemo.com/tm-569-edu-meeting
               </div>
               <div class="down-content">
                 <div class="date">
-                  <h6>Oct <span>19-20</span></h6>
+                  <h6>April <span>04</span></h6>
                 </div>
-                <a href="#"><h4>GPC Bathinda in PTIS Games 2023</h4></a>
-                <p>Students performed exceptionally well in PTIS Games 2023</p>
+                <a href="#"><h4>Annual Prize Distribution (GPC Bathinda)</h4></a>
+                <p>GPC Bathinda organized Annual Prize Distribution</p>
               </div>
             </div>
           </div>
-           <!--MCQ Test Competition-->
-
-           <div class="col-lg-6">
+          <div class="col-lg-6">
             <div class="meeting-item">
               <div class="thumb">
                 <div class="slider">
@@ -778,104 +787,102 @@ https://templatemo.com/tm-569-edu-meeting
               </div>
               <div class="down-content">
                 <div class="date">
-                  <h6>Oct <span>19-20</span></h6>
+                  <h6>March <span>21</span></h6>
                 </div>
-                <a href="#"><h4>GPC Bathinda Organized Badminton Game</h4></a>
-                <p>GPC hosted the Badminton Game under the PTIS Games 2023</p>
+                <a href="#"><h4>Literary Club Organized Speech Competition</h4></a>
+                <p>Literary Club organized Speec Competition celebrating Women's Day</p>
               </div>
             </div>
           </div>
-
 
 
         </div>
         <!--Seminar on Self Employment and Standard Club activity-->
         <div class="row">
-          <!--Blood Donation Camp-->
-          <div class="col-lg-6">
-            <div class="meeting-item">
-              <div class="thumb">
-                <div class="slider">
-                  <img id="image7"/>
-                </div>
+            <div class="col-lg-6">
+              <div class="meeting-item">
+                <div class="thumb">
+                  <div class="slider">
+                    <img id="image7"/>
+                  </div>
 
-              </div>
-              <div class="down-content">
-                <div class="date">
-                  <h6>Oct <span>10</span></h6>
                 </div>
-                <a href="#"><h4>Quality Connect Campaign</h4></a>
-                <p>Standards Club of the institute organized "Quality Connect Campaign" seminar</p>
+                <div class="down-content">
+                  <div class="date">
+                    <h6>March <span>20</span></h6>
+                  </div>
+                  <a href="#"><h4>Anti Drug Campaign- NSS Club</h4></a>
+                  <p>Organized "Anti Drug" Campaign under aegis of Red Ribbon Club</p>
+                </div>
               </div>
             </div>
+
+             <div class="col-lg-6">
+              <div class="meeting-item">
+                <div class="thumb">
+                  <div class="slider">
+                    <img id="image8"/>
+                  </div>
+
+                </div>
+                <div class="down-content">
+                  <div class="date">
+                    <h6>Feb <span>20</span></h6>
+                  </div>
+                  <a href="#"><h4>Art and Hobby Club organized Dance Competition</h4></a>
+                  <p>Art and Hobby Club of Institute organized Dance Competition</p>
+                </div>
+              </div>
+            </div>
+
+
+
           </div>
+          <div class="row">
+            <div class="col-lg-6">
+              <div class="meeting-item">
+                <div class="thumb">
+                  <div class="slider">
+                    <img id="image1"/>
+                  </div>
+
+                </div>
+                <div class="down-content">
+                  <div class="date">
+                    <h6>Aug <span>24</span></h6>
+                  </div>
+                  <a href="#"><h4>Rangoli Competition</h4></a>
+                  <p>Art and Hobby Club Organized Rangoli Competition</p>
+                </div>
+              </div>
+            </div>
+
+             <div class="col-lg-6">
+              <div class="meeting-item">
+                <div class="thumb">
+                  <div class="slider">
+                    <img id="image2"/>
+                  </div>
+
+                </div>
+                <div class="down-content">
+                  <div class="date">
+                    <h6>Nov <span>24</span></h6>
+                  </div>
+                  <a href="#"><h4>"Hamara Samvidhan Hamara Swabhimaan"</h4></a>
+                  <p>Science Club of the institute Celebrated Constitutional Day.</p>
+                </div>
+              </div>
+            </div>
+
+
+
+          </div>
+
+
            <!--MCQ Test Competition-->
 
-           <div class="col-lg-6">
-            <div class="meeting-item">
-              <div class="thumb">
-                <div class="slider">
-                  <img id="image8"/>
-                </div>
 
-              </div>
-              <div class="down-content">
-                <div class="date">
-                  <h6>Sep <span>29</span></h6>
-                </div>
-                <a href="#"><h4>Seminar on Self Employment</h4></a>
-                <p>Training and Placement Cell of the Institute Organized Seminar on Self Employment</p>
-              </div>
-            </div>
-          </div>
-
-
-
-        </div>
-
-
-        <div class="row">
-          <!--Blood Donation Camp-->
-          <div class="col-lg-6">
-            <div class="meeting-item">
-              <div class="thumb">
-                <div class="slider">
-                  <img id="image1"/>
-                </div>
-
-              </div>
-              <div class="down-content">
-                <div class="date">
-                  <h6>Sep <span>29</span></h6>
-                </div>
-                <a href="#"><h4>Blood Donation Camp</h4></a>
-                <p>Department of Pharmacy Organized Blood Donation Camp</p>
-              </div>
-            </div>
-          </div>
-           <!--MCQ Test Competition-->
-
-           <div class="col-lg-6">
-            <div class="meeting-item">
-              <div class="thumb">
-                <div class="slider">
-                  <img id="image2"/>
-                </div>
-
-              </div>
-              <div class="down-content">
-                <div class="date">
-                  <h6>Sep <span>29</span></h6>
-                </div>
-                <a href="#"><h4>MCQ Based Test</h4></a>
-                <p>Logical Reasoning Club of the institute organized MCQ Based Competition for Students.</p>
-              </div>
-            </div>
-          </div>
-
-
-
-        </div>
         <div class="row">
 
 
